# wandbot

./: .cursorrules  .gitignore  .replit  CONTRIBUTING.md  README.md  build-dev.sh  build.sh  build_e2b_image.sh  download_vectordb_index.py  e2b.Dockerfile  environment.yaml  eval_requirements.txt  instruction.md  pyproject.toml  replit.nix  requirements.txt  run.sh  temp_gemini_full_payload.py  temp_gemini_metadata.py  temp_gemini_simple.py  temp_gemini_stream.py  temp_gemini_test.py  temp_gemini_test_stream.py  temp_gemini_usage_metadata.py  test_logs_20250123_131652.txt
.github/workflows/: codeql.yml
data/adcopy/: ad_contexts.json  human_prompt.md  system_prompt.md  wandbot_query_prompt.md
data/prompts/: chat_prompt.json  chat_prompt.txt  eval_prompt.json  eval_prompt.txt  history_prompt.json  hyde_prompt.txt  system_prompt.md
docs/: native_chromadb_implementation.md
examples/: synthetic_wandbot_answer_and_evaluation.ipynb  synthetic_wandbot_question_generation.ipynb
modal/: deploy_all.sh  modal_app.py  modal_bots.py  setup_modal_secrets.sh
src/: Readme.md  chat.py  ingest.py  main.py  read_db.py  test_fastapi.py
src/adapters/discord/: app.py  config.py
src/adapters/fastapi/: app.py
src/adapters/slack/: CreatingABot.md  adapter.py  app.py  config.py
src/llm-service-adapter/: Readme.md  global_config.py  main.py  models.py
src/llm-service-adapter/adapters/: base_adapter.py
src/llm-service-adapter/adapters/discord/: CreatingABot.md  adapter.py  app.py  config.py
src/llm-service-adapter/adapters/fastapi/: adapter.py  app.py
src/llm-service-adapter/adapters/slack/: adapter.py  app.py  config.py
src/llm-service-adapter/managers/: adapter_manager.py  service_manager.py
src/llm-service-adapter/services/: db_service.py
src/llm-service-adapter/services/wandbot/: chat.py  ingest.py  llm_service.py
src/llm-service-adapter/wandb_utils/: stream_table.py
src/managers/: __init__.py  service_manager.py
src/services/: db_service.py
src/services/wandbot/: chat.py  default_config.py
src/slack_app/: main.py
src/wandb_utils/: stream_table.py
src/wandbot/: __init__.py  api.py  chat.py  chat_api.py  chat_new.py  config.py  config.yaml  discord_app.py  eval.py  fake_chat.py  ingest.py  langchain.py  logging_api.py  prompts.py  read_db.py  run_gunicorn.sh  utils.py  wandbot_tool.py
src/wandbot/adcopy/: adcopy.py
src/wandbot/api/: app.py  client.py  crud.py  database.py  models.py  schemas.py
src/wandbot/api/routers/: adcopy.py  chat.py  content_navigator.py  database.py  retrieve.py
src/wandbot/apps/: chat.py  config.py  utils.py
src/wandbot/apps/ZD/: ZDWandbot.py
src/wandbot/apps/discord/: __main__.py  config.py
src/wandbot/apps/discord_app/: __main__.py  config.py  main.py
src/wandbot/apps/slack/: __main__.py  config.py  formatter.py  main.py  utils.py
src/wandbot/apps/slack_app/: main.py
src/wandbot/apps/zendesk/: __main__.py  config.py  extract_by_type.py
src/wandbot/chat/: chat.py  chat_model.py  config.py  langchain.py  prompts.py  query_enhancer.py  query_handler.py  rag.py  response_synthesis.py  retriever.py  schemas.py  utils.py
src/wandbot/chat/models/: __init__.py  anthropic_model.py  base.py  gemini_model.py  openai_model.py
src/wandbot/configs/: anthropic_config.yaml  app_config.py  chat_config.py  cohere_config.yaml  database_config.py  hf_config.yaml  ingestion_config.py  modal_config.py  openai_config.yaml  vector_store_config.py  vectorstore_config.py  voyage_config.yaml
src/wandbot/customization/: langchain.py
src/wandbot/database/: client.py  config.py  crud.py  database.py  models.py  schemas.py
src/wandbot/discord_app/: main.py
src/wandbot/evaluation/: README.md  config.py  data_utils.py  eval.py  eval_config.py  eval_schemas.py  evaluate_retrieval.ipynb  evaluation_analysis.ipynb  jp_evaluation_dataprep.py  jp_evaluation_dataupload.py  jp_kr_evaluation_dataprep.py  jp_kr_evaluation_dataupload.py  weave_model.py  weave_scorer.py
src/wandbot/evaluation/configs/: cohere_config.yaml  hf_config.yaml  mistral_config.yaml  openai_config.yaml  voyage_config.yaml
src/wandbot/evaluation/eval/: __main__.py  async_main.py  compare_query_enhancer.py  correctness.py  factfulness.py  log_eval.py  pure_evaluator.py  relevancy.py  test_pure_evaluator.py  utils.py
src/wandbot/evaluation/eval_metrics/: correctness.py  factfulness.py  relevancy.py
src/wandbot/evaluation/utils/: jp_evaluation_dataprep.py  (+3 more)
src/wandbot/ingestion/: __init__.py  __main__.py  base.py  config.py  create_vector_store.py  custom_dataset.yaml  datastore.py  datastores.py  ingest.py  prepare_data.py  prepare_dataset.py  preprocess_data.py  report.py  run_ingestion_config.py  settings.py  typings.py  utils.py  vectorstore_and_report.py  vectorstores.py
src/wandbot/models/: embedding.py  llm.py
src/wandbot/multi_modal/: multi_modal.py
src/wandbot/query_handler/: history_handler.py  intents_enhancer.py  keyword_search_enhancer.py  language_detection.py  query_enhancer.py  vector_search_enhancer.py  web_search.py
src/wandbot/rag/: __init__.py  query_handler.py  response_synthesis.py  response_synthesis_v2.py  retrieval.py  utils.py
src/wandbot/retriever/: __init__.py  base.py  chroma.py  embeddings.py  external.py  fusion.py  mmr.py  native_chroma.py  postprocessors.py  reranking.py  tmp_mmr.py  utils.py  web_search.py
src/wandbot/schema/: api_status.py  document.py  retrieval.py
src/wandbot/slack_app/: main.py
src/wandbot/youtube_chat/: chat_utils.py  prompts.py  video_utils.py
tests/: conftest.py  mock_models.py  test_anthropic_model.py  test_chat_model.py  test_chat_model_new.py  test_config.py  test_embedding.py  test_error_propagation.py  test_llm.py  test_model_config.py  test_model_errors.py  test_model_fallback.py  test_models.py  test_openai_model.py  test_query_handler.py  test_response_synthesis.py  test_retrieval.py  test_stream.py
tests/evaluation/: test_correctness.py  test_eval.py  test_eval_config.py
wandbot/ingestion/: __init__.py  config.py
wandbot/retriever/: __init__.py  base.py  native_chroma.py
(+32 files in other folders)
