[tool.poetry]
name = "wandbot"
version = "1.3.0"
description = "WandBot is a Q&A bot for Weights & Biases Models and Weave documentation"
authors = [
"parambharat <bharat.ramanathan@wandb.com>", 
"morganmcg1 <morganmcg1@users.noreply.github.com>",
"ayulockin <ayusht@wandb.com>",
"ash0ts <anish@wandb.com>"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/wandb/wandbot"
repository = "https://github.com/wandb/wandbot"
packages = [{include = "wandbot", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80
skip = [".gitignore", "data", "examples", "notebooks", "artifacts", ".vscode", ".github", ".idea", ".replit", "*.md", "wandb", ".env", ".git", ]

[tool.black]
line-length = 80
skip = [".gitignore", "data", "examples", "notebooks", "artifacts", ".vscode", ".github", ".idea", ".replit", "*.md", "wandb", ".env", ".git", ]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests that make real API calls to external services",
]

[tool.ruff]
# Line length setting
line-length = 120

# Enable specific rule categories
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Exclude directories/files
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

# Additional configurations
unfixable = ["F401"]  # Don't auto-fix unused imports

# Allow unused variables when they start with an underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Specific rule configurations
[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["mypackage"]  # Replace with your package name

# Per-file ignores
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py files
"tests/*.py" = ["E501"]   # Ignore line length in test files
